add support for partition evolution + partish stats for desc table